fixed bug with overflow, added references services

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,7 +10,6 @@
 html {
   scroll-behavior: smooth;
   font-size: 16px;
-  overflow-x: hidden;
 }
 
 @media (min-width: 766px) {
@@ -34,6 +33,10 @@ html {
 
   --color-light-grey: #f1f1f1;
   --color-grey: #e7e7e7;
+}
+
+.App {
+  overflow: hidden;
 }
 
 .wrapper {
